tests/lean/641.lean.expected.out
def y : Unit :=
Foo.x
641.lean:9:17-9:18: error: ambiguous, possible interpretations 
  Bar.x
  
  Foo.x
def Rig.x : Nat :=
_root_.x
